# codegraph

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
codegraph/: __init__.py  __main__.py  cli.py  graph.py  incremental.py  indexer.py  mcp_server.py  output.py  resolve.py  utils.py
codegraph/parsers/: base.py  go.py  javascript.py  python.py  rust.py
tests/: test_codegraph.py  test_integration.py  test_mcp_server.py  test_phase2.py
