[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph"
dynamic = ["version"]
description = "Lightweight local code knowledge graph for AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "CodeGraph Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0", "anyio>=4.0"]
dev = ["pytest>=7.0", "codegraph[mcp]"]

[project.scripts]
codegraph = "codegraph.cli:main"

[project.urls]
Homepage = "https://github.com/EdgarOrtegaRamirez/codegraph"
Repository = "https://github.com/EdgarOrtegaRamirez/codegraph"
Issues = "https://github.com/EdgarOrtegaRamirez/codegraph/issues"

[tool.setuptools.packages.find]
include = ["codegraph*"]

[tool.setuptools.dynamic]
version = {attr = "codegraph.__version__"}
